--- a/JSXPartTwo.html
+++ b/JSXPartTwo.html
@@ -12,7 +12,7 @@
     const Button = () => (<button style={{backgroundColor: "tomato"}} onClick={()=> console.log("Clicked")}>Click Me</button>)
 
 
-    const Container = (
+    const Container = () => (
         <>
             <Title/>
             <Button/>
@@ -21,7 +21,7 @@
     
     // const container = React.createElement("div", null, [Title, Button])
 
-    ReactDOM.render(Container, root);
+    ReactDOM.render(<Container/>, root);
 </script>
 
 </html>
