--- a/bState/cInputsState.html
+++ b/bState/cInputsState.html
@@ -12,7 +12,7 @@
 
     function App(){
 
-    const [minutes, setMinutes] = React.useState()
+    const [minutes, setMinutes] = React.useState(0)
     const onChange = (event) => {
         setMinutes(event.target.value);
     }
