--- a/bState/cInputsStateUnitConversion.html
+++ b/bState/cInputsStateUnitConversion.html
@@ -13,14 +13,17 @@
     function App(){
 
     const [minutes, setMinutes] = React.useState(0)
+
     const onChange = (event) => {
         setMinutes(event.target.value);
+        console.log(event);
     }
+
         return(
             <>
                 <h1>Super Converter</h1>
                 <label htmlFor="minutes">Minutes</label>
-                <input id="minutes" type="number" placeholder="Minutes" onChange={onChange}/><br/>
+                <input value={minutes} id="minutes" type="number" placeholder="Minutes" onChange={onChange}/><br/>
                 <h4>want to convert : {minutes} min</h4>
                 <br/>
                 <label htmlFor="hours">Hours</label>
